Fix text vertically align

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -94,12 +94,12 @@
   box-sizing: border-box;
   cursor: pointer;
   float: left;
-  height: 50px;
+  height: 36px;
   margin: 0;
   overflow: hidden;
   position: relative;
   text-align: center;
-  width: 120px;
+  width: 94px;
 
   a {
     color: $primary;
@@ -107,7 +107,7 @@
     font-family: arial;
     font-size: 16px;
     font-weight: 600;
-    line-height: 50px;
+    line-height: 36px;
     position: relative;
     text-decoration: none;
     transition: all .5s ease;
